--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt, wide, leqno]{mwart}
 
 \usepackage{../../template}
+%\usepackage{showframe}
 
 \tit{P.1.6.}
 
@@ -10,24 +11,42 @@
 
 \section{Wstęp}\label{sec:ws}
 
-Indiana Bill
+W 1897 roku Amerykański fizyk Edward J. Goodwin oznajmił światu, że udało mu się poprawnie skonstruować kwadrat o polu równym polu koła. W tym samym roku jego wynik został przedłożony Zebraniu Stanu Indiana i w życie wszedł Artykuł o Liczbie Pi, na mocy którego $\pi=3.2$. Ponad 2000 lata wcześniej, w III wieku p.n.e., Archimedes napisał
+$$3.1408\approx{223\over71}<\pi<{22\over7}\approx 3.1428,$$
+co daje ograniczenia bliższe tym dzisiaj uważanym za najdokładniejsze niż artykuł z XIX wieku. W 2009 roku za pomocą algorytmu braci Chudowsky'ch, wyprowadzonego ze wzorów S. Ramanujana, zostało osiągniete przybliżenie $\pi$ przez 10 trilionów cyfr znaczących. Dzisiaj istnieją jeszcze szybsze algorytmu na przybliżanie $\pi$ niż ten z 2009 roku i badanie metod przybliżania wartości matematycznych jest nadal żywą dziedziną nauki.
 
-Metoda Chudowskiego - rekord cyfr pi z 2009, na podstawie wzoru Ramanujana
+W tej pracy przyjżymy się 5 metodom przybliżania liczby $\pi$. W Rozdziale 2. zaprezentujemy naiwne algorytmy, z których jedna okazała się nie odstawać od bardziej zaawansowanych sposobów zaprezentowanych w dalszych rozdziałach. W Rozdziałach 3 i 4 przyjżymy się dwóm metodom liniowo zbieżnym do $\pi$. W Rozdziale 5. zaprezentowany jest algorytm zbieżny kwadratowo do liczby $\pi$.
+
+\subsection{Metoda}
+
+Do obliczeń używaliśmy precyzji 16 069 i zmiennych typu \verb+BigFloat+ w języku \verb+Julia+. Za wartość dokładną $\pi$ użyliśmy wartości bibliotecznej typu \verb+Irrational+. Dzięki temu jest ona wyliczana dla każdej precyzji \cite{julia}.
+
+Dla każdej metody eksperymentalnie szacowaliśmy rząd zbieżności i przedstawiliśmy wyniki na odpowiednich wykresach.
 
 \input{pierwsze-proby.tex}
 
 \input{wzor-viete.tex}
 
 \input{ramanujan.tex}
-% https://www.maa.org/sites/default/files/pdf/pubs/amm_supplements/Monthly_Reference_5.pdf
 
 \input{super-szybki-super-ciezki.tex}
+
+\newpage
+
+\section{Podsumowanie}
+
+Po piewrsze, metoda zaproponowana w treści zadania jest nieoptymalna. Zbiega do $\pi$ w sposób nadliniowy, podczas gdy pozostałe metody, z pominięciem algorytmu Monte Carlo, zbiegają co najmniej liniowo. Metoda Gaussa-Legendre'a zbiega najszybciej, jednak to metoda Chudnowsky'ch stanowi najlepszy kompromis między szybkością osiągania kolejnych liczb znaczących a zużywaną pamięcią. Co jednak najważniejsze, ludolfina została określona ze złożonością obliczeniową $O(1)$: 
+
+\begin{center}
+    \emph{Następnie sporządził odlew "morza" o średnicy dziesięciu łokci, okrągłego, o wysokości pięciu łokci i o obwodzie trzydziestu łokci} \cite{biblia}. 
+\end{center}
+Ponieważ $\pi={L\over 2r}={30\over 10}=3$. W takim razie wszystkie nasze obliczenia okazują się niepoprawne.
 
 \koniec
 
 \begin{thebibliography}{69}
     \bibitem{review}
-        Baruah, Nayandeep Deka, Bruce C. Berndt, and Heng Huat Chan.,
+        N. D. Baruah, C. Bruce, Berndt, and Heng Huat Chan.,
         \textit{Ramanujan's Series for $\frac1\pi$: A Survey.}, 
         The American Mathematical Monthly 116, no. 7 (2009): 567-87,
         \url{http://www.jstor.org/stable/40391165}.
@@ -47,6 +66,20 @@ Metoda Chudowskiego - rekord cyfr pi z 2009, na podstawie wzoru Ramanujana
         \textit{Gauss-Legendre Algorithm},
         accessed 20.11.2022,
         \url{https://cage.ugent.be/~hvernaev/Gauss-L.html}
+    \bibitem{julia}
+        S. Byrne, L. Benet and D. Sanders,
+        \textit{Some fun with $\pi$ in Julia},
+        accessed 20.11.2022,
+        \url{https://julialang.org/blog/2017/03/piday/}
+    \bibitem{bog}
+        D. Kincaid, W. Cheney,
+        \textit{Analiza numeryczna},
+        Wydawnictwo Techniczno-Naukowe,
+        Warszawa, 2006
+    \bibitem{biblia}
+        \textit{Biblia Tyśiąclecia}, 1 Krl 7, 23,
+        Wydawnictwo Palottinum,
+        Poznań, 2003
 \end{thebibliography}
 
 \end{document}
