--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -46,16 +46,20 @@ Ponieważ $\pi={L\over 2r}={30\over 10}=3$. W takim razie wszystkie nasze oblicz
 
 \begin{thebibliography}{69}
     \bibitem{review}
-        N. D. Baruah, C. Bruce, Berndt, and Heng Huat Chan.,
+        N. D. Baruah, B. C., Berndt, and H. H. Chan.,
         \textit{Ramanujan's Series for $\frac1\pi$: A Survey.}, 
         The American Mathematical Monthly 116, no. 7 (2009): 567-87,
         \url{http://www.jstor.org/stable/40391165}.
-    \bibitem{ramanujan}
-        Srinivasa Ramanujan,
-        \textit{Collected Papers of Srinivasa Ramanujan}, 
-        Cambridge University Press,
-        1st edition,
-        2015
+    \bibitem{julia}
+        S. Byrne, L. Benet and D. Sanders,
+        \textit{Some fun with $\pi$ in Julia},
+        accessed 20.11.2022,
+        \url{https://julialang.org/blog/2017/03/piday/}
+    \bibitem{biblia}
+        P. Bóg,
+        \textit{Biblia Tyśiąclecia}, 1 Krl 7, 23,
+        Wydawnictwo Palottinum,
+        Poznań, 2003
     \bibitem{gausse-smth}
         Richard P. Brent,
         \textit{Multiple-precision zero-finding methods and the complexity of elementary function evaluation},
@@ -66,20 +70,17 @@ Ponieważ $\pi={L\over 2r}={30\over 10}=3$. W takim razie wszystkie nasze oblicz
         \textit{Gauss-Legendre Algorithm},
         accessed 20.11.2022,
         \url{https://cage.ugent.be/~hvernaev/Gauss-L.html}
-    \bibitem{julia}
-        S. Byrne, L. Benet and D. Sanders,
-        \textit{Some fun with $\pi$ in Julia},
-        accessed 20.11.2022,
-        \url{https://julialang.org/blog/2017/03/piday/}
     \bibitem{bog}
         D. Kincaid, W. Cheney,
         \textit{Analiza numeryczna},
         Wydawnictwo Techniczno-Naukowe,
         Warszawa, 2006
-    \bibitem{biblia}
-        \textit{Biblia Tyśiąclecia}, 1 Krl 7, 23,
-        Wydawnictwo Palottinum,
-        Poznań, 2003
+    \bibitem{ramanujan}
+        Srinivasa Ramanujan,
+        \textit{Collected Papers of Srinivasa Ramanujan}, 
+        Cambridge University Press,
+        1st edition,
+        2015
 \end{thebibliography}
 
 \end{document}
