muzg paruje, ale trzeba porpawki

--- a/prac_1/doc/pierwsze-proby.tex
+++ b/prac_1/doc/pierwsze-proby.tex
@@ -131,7 +131,7 @@ Korzystając z algorytmu Monte Carlo możemy wybierać losowo współrzędne $x,
 $$x^2+y^2\leq1.$$
 Otrzymany stosunek będzie coraz bliższy $\frac\pi4$ wraz ze zwiększaniem ilości testowanych punktów.
 
-Na Wykresie~\ref{monte-carlo-error}. zaprezentowany jest logarytm dziesiętny z błędu względnego metody Monte Carlo. Szacowanie zbieżności tej metody wykracza poza zakres wiedzy studenta 3 semestru ze względu na losowość tego algorytmu. Wykorzystanie technik z kursu Rachunku Prawdopodobieństwa ułatwiłoby to zadanie. Na Wykresie~\ref{monte-carlo-convergence} widzimy jeden z wykresów ilorazu błędu kolejnych wyrazów jaki uzyskaliśmy przy uruchamianiu algorytmu. Na obu wykresach obserwujemy wachania lokalne zbieżności algorytmu.
+Na Wykresie~\ref{monte-carlo-error}. zaprezentowany jest logarytm dziesiętny z błędu względnego metody Monte Carlo. Szacowanie zbieżności tej metody wykracza poza zakres wiedzy studenta 3 semestru ze względu na losowość tego algorytmu. Wykorzystanie technik z kursu Rachunku Prawdopodobieństwa ułatwiłoby to zadanie. Na Wykresie~\ref{monte-carlo-convergence} widzimy jeden z wykresów ilorazu błędu kolejnych wyrazów jaki uzyskaliśmy przy uruchamianiu algorytmu. Jako, że jest to algorytm losowy, to lokalnie wraz z większeniem liczby iteracji, przybliżenie może się pogorszyć. Co jest pewną wadą tej metody.
 
 \begin{figure}[!h]\centering
 \renewcommand{\figurename}{Wykres}
