--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -21,7 +21,7 @@ W tej pracy przyjżymy się 5 metodom przybliżania liczby $\pi$. W Rozdziale 2.
 
 Do obliczeń używaliśmy precyzji 16 069 i zmiennych typu \verb+BigFloat+ w języku \verb+Julia+. Za wartość dokładną $\pi$ użyliśmy wartości bibliotecznej typu \verb+Irrational+. Dzięki temu jest ona wyliczana dla każdej precyzji \cite{julia}.
 
-Dla każdej metody eksperymentalnie szacowaliśmy rząd zbieżności i przedstawiliśmy wyniki na odpowiednich wykresach.
+Dla każdej metody eksperymentalnie szacowaliśmy rząd zbieżności i przedstawiliśmy wyniki na odpowiednich wykresach. Przy pierwszych 4 metodach wykonaliśmy 10 000 iteracji. W metodzie Chudnowsky'ch zaś wystarczyło tylko 450 iteracji, by osiągnąć granice precyzji. Zaś w motedzie Gaussa-Legendre'a wystarczyło tylko 21 iteracji. 
 
 \input{pierwsze-proby.tex}
 
