--- a/prac_1/doc/wzor-viete.tex
+++ b/prac_1/doc/wzor-viete.tex
@@ -25,7 +25,7 @@ i $a_1=\sqrt2$.
 
 \subsection{Wyniki}
 
-Na Wykresie~\ref{viete-error}. zaprezentowany jest wykres zbieżności algorytmu Viete'a. Eksperymentalne wyznaczenie rzędu zbieżności, tak jak i gradient prezentowanego wykresu, sugerują liniową zbieżność tej metody wyliczania Viete. Od około 8750 iteracji wartość zwracana przez metodę Viete'a pokrywa się z wartością wyliczaną bibliotecznie.
+Na Wykresie~\ref{viete-error}. zaprezentowany jest wykres zbieżności algorytmu Viete'a. Eksperymentalne wyznaczenie rzędu zbieżności, tak jak i gradient prezentowanego wykresu, sugerują liniową zbieżność tej metody wyliczania Viete. Od około 8750 iteracji wartość zwracana przez metodę Viete'a pokrywa się z wartością biblioteczną.
 
 \begin{figure}[!h]\centering
     \renewcommand{\figurename}{Wykres}
