--- a/prac_1/doc/ramanujan.tex
+++ b/prac_1/doc/ramanujan.tex
@@ -20,7 +20,7 @@ Aby wyprowadzić ten wzór, jak i inne podane przez Ramanujana, potrzebna jest z
     \centering
     \renewcommand{\figurename}{Wykres}
     \includegraphics[width=0.7\textwidth]{../prog/chudnowsky_log_error.png}
-    \caption{Wykres logarytmu dziesiętnego z błędu względnego dla przybliżenia $\pi$ za pomocą algorytmu braci Chudnowskych.}
+    \caption{Wykres ilości cyfr znaczących uzyskanych dla  przybliżenia  $\pi$ za pomocą algorytmu braci Chudnowskych.}
     \label{chudnowsky-error}
 \end{figure}
 
