--- a/prac_1/doc/super-szybki-super-ciezki.tex
+++ b/prac_1/doc/super-szybki-super-ciezki.tex
@@ -29,7 +29,7 @@ Metoda Gaussa-Legrendre'a okazała się zbiegać do implementacji bibliotecznej 
     \centering
     \renewcommand{\figurename}{Wykres}
     \includegraphics[width=0.7\textwidth]{../prog/gauss_legendre_log_error.png}
-    \caption{Wykres logarytmu dziesiętnego z błędu względnego dla przybliżenia $\pi$ za pomocą algorytmu Gaussa-Legendre'a.}
+    \caption{Wykres ilości cyfr znaczących uzyskanych dla przybliżenia  $\pi$ za pomocą algorytmu Gaussa-Legendre'a.}
     \label{gauss-error}
 \end{figure}
 
