podpisy pod p wykresami

--- a/prac_1/doc/ramanujan.tex
+++ b/prac_1/doc/ramanujan.tex
@@ -28,7 +28,7 @@ Aby wyprowadzić ten wzór, jak i inne podane przez Ramanujana, potrzebna jest z
     \centering
     \renewcommand{\figurename}{Wykres}
     \includegraphics[width=0.7\textwidth]{../prog/chudnowsky_error_ratio.png}
-    \caption{Wykres ilorazu błędów względnych wyrazu $n+1$ i $n$ dla algorytmu Chudowskych.}
+    \caption{Wykres estymowanej wartości p dla algorytmu Chudowskych.}
     \label{chudnowsky-convergence}
 \end{figure}
 
