--- a/prac_1/doc/super-szybki-super-ciezki.tex
+++ b/prac_1/doc/super-szybki-super-ciezki.tex
@@ -37,7 +37,7 @@ Metoda Gaussa-Legrendre'a okazała się zbiegać do implementacji bibliotecznej 
     \centering
     \renewcommand{\figurename}{Wykres}
     \includegraphics[width=0.7\textwidth]{../prog/gauss_legendre_error_ratio.png}
-    \caption{Wykres ilorazu błędów względnych wyrazu $n+1$ i $n$ dla algorytmu Gaussa-Legrendre'a.}
+    \caption{Wykres estymowanej wartości p dla algorytmu Gaussa-Legrendre'a.}
     \label{gauss-convergence}
 \end{figure}
 
