--- a/prac_1/doc/wzor-viete.tex
+++ b/prac_1/doc/wzor-viete.tex
@@ -37,7 +37,7 @@ Na Wykresie~\ref{viete-error}. zaprezentowany jest wykres zbieżności algorytmu
 \begin{figure}[!h]\centering
     \renewcommand{\figurename}{Wykres}
     \includegraphics[width=0.7\textwidth]{../prog/viete_error_ratio.png}
-    \caption{Wykres ilorazu błędów względnych wyrazu $n+1$ i $n$ dla metody z wykorzystaniem metody Viete'a.}
+    \caption{Wykres estymowanej wartości p dla metody z wykorzystaniem metody Viete'a.}
     \label{viete-convergence}
 \end{figure}
 
